@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
@@ -54,7 +55,6 @@ public class RoleService implements IRoleService {
 			log.debug("About to delete role: {}", roleId);
 			roleRepository.deleteById(roleId);
 		} catch (Exception e) {
-			log.error("Role with id {} couldn't be found", roleId);
 			throw new RoleNotFoundException("Role to delete not found", e);
 		}
 	}
@@ -78,10 +78,17 @@ public class RoleService implements IRoleService {
 				.stream()
 				.map(p -> privilegeRepository.findByName(p))
 				.filter(Objects::nonNull)
-				.toList());
+				.collect(Collectors.toList()));
 		roleRepository.saveAndFlush(role);
 		log.debug("Saved Role with Id: {}", role.getId());
 		return new RoleDto(role);
 	}
+
+	@Override
+	public List<Role> getRolesByNames(List<String> names) {
+		return roleRepository.findByNameIn(names);
+	}
+	
+	
 
 }
